log
Wed 20 Mar 2024 07:46:01 PM UTC: 
 exercises.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  1|4
total_score: 10/70
9c25d75
Wed 20 Mar 2024 07:57:07 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:67:10: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   67 |     suma += dato;
      |          ^~
cc1: all warnings being treated as errors
Compilation failed
80a55e4
Wed 20 Mar 2024 07:57:19 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
2aa2135
Wed 20 Mar 2024 08:15:34 PM UTC: 
 exercises.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
dd7b90f
Wed 20 Mar 2024 08:24:04 PM UTC: 
 exercises.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:108:11: error: implicit declaration of function ‘is_empty’ [-Werror=implicit-function-declaration]
  108 |   while (!is_empty(P1))
      |           ^~~~~~~~
exercises.c:117:3: error: implicit declaration of function ‘destroy_stack’ [-Werror=implicit-function-declaration]
  117 |   destroy_stack(aux);
      |   ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
817fc02
Wed 20 Mar 2024 08:34:41 PM UTC: 
 exercises.c | 13 ++++++++-----
 1 file changed, 8 insertions(+), 5 deletions(-)
 tests:  0|0
1511a37
Wed 20 Mar 2024 08:39:03 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
bcc78bd
Wed 20 Mar 2024 08:49:22 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
36f5e01
Wed 20 Mar 2024 08:51:20 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|2
total_score: 40/70
5264879
Wed 20 Mar 2024 08:51:34 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|2
total_score: 40/70
d0e4a6f
